<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="235dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:layout_gravity="center"
        android:padding="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_menu"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/view_connect_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:theme="@style/FlatButton">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_search"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/image_view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_with_bluetooth"
                    android:textSize="22sp"
                    android:layout_marginStart="12dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:theme="@style/FlatButton"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_settings2"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/image_view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textSize="22sp"
                    android:layout_marginStart="12dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_close_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:theme="@style/FlatButton"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_exit"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/image_view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_app"
                    android:textSize="22sp"
                    android:layout_marginStart="12dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>