<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="235dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:layout_gravity="center"
        android:padding="2dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_device_bluettoth"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:paddingStart="6dp"
                android:paddingEnd="12dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_alignParentStart="true"/>

            <ProgressBar
                android:id="@+id/loading_scan"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="6dp"
                android:theme="@android:style/Widget.Material.Light.ProgressBar.Small"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paired_devices"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:paddingStart="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:background="@color/colorBlackLight" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list_paired_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true">
            </ListView>
        </LinearLayout>
        <Button
            android:id="@+id/btn_scan_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_for_devices"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="invisible"
            android:theme="@style/FlatButton2"
            android:layout_marginTop="2dp"
            android:layout_below="@id/linear_list_view"/>
    </RelativeLayout>
</LinearLayout>